fixing overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -653,7 +653,7 @@ section {
 
 @media (max-width: 768px) {
   html {
-    overflow: hidden;
+    overflow-x: hidden;
   }
   .heading {
     font-size: 12vw;
